[6a93279fd7dd3d1378afe1adaff091a93b58924d]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -889,7 +889,7 @@ Below we specify any existing differences:</p>
       <td>Text</td>
       <td>100</td>
       <td>Yes</td>
-      <td>Means of Payment Type.</td>
+      <td>Type of the Payment Method.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.Amount</code></td>
@@ -1460,7 +1460,7 @@ Below we specify any existing differences:</p>
       <td>Text</td>
       <td>100</td>
       <td>Yes</td>
-      <td>Means of Payment Type.</td>
+      <td>Type of the Payment Method.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.Amount</code></td>
@@ -1952,7 +1952,7 @@ Below we specify any existing differences:</p>
       <td>Text</td>
       <td>100</td>
       <td>Yes</td>
-      <td>Means of Payment Type.</td>
+      <td>Type of the Payment Method.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.Amount</code></td>
@@ -2784,7 +2784,7 @@ Below we specify any existing differences:</p>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.Type</code></td>
-      <td>Means of Payment Type.</td>
+      <td>Type of the Payment Method.</td>
       <td>Text</td>
       <td>100</td>
       <td>Yes</td>
@@ -3090,7 +3090,7 @@ Below we specify any existing differences:</p>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.Type</code></td>
-      <td>Type of the Payment Method..</td>
+      <td>Type of the Payment Method.</td>
       <td>Text</td>
       <td>100</td>
       <td>Yes</td>
@@ -5012,7 +5012,7 @@ PaymentIds associated with the identifier.</p>
       <td>Text</td>
       <td>100</td>
       <td>Yes</td>
-      <td>Means of Payment Type.</td>
+      <td>Type of the Payment Method.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.Amount</code></td>
@@ -9470,7 +9470,7 @@ In this model, the merchant’ system is in charge of defining the period, the t
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.Type</code></td>
-      <td>Means of Payment Type.</td>
+      <td>Type of the Payment Method.</td>
       <td>Text</td>
       <td>100</td>
       <td>Yes</td>
@@ -9715,7 +9715,7 @@ In this model, the merchant’ system is in charge of defining the period, the t
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.Type</code></td>
-      <td>Means of Payment Type.</td>
+      <td>Type of the Payment Method.</td>
       <td>Text</td>
       <td>100</td>
       <td>Yes</td>
@@ -9908,7 +9908,7 @@ In this model, the merchant’ system is in charge of defining the period, the t
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.Type</code></td>
-      <td>Means of Payment Type.</td>
+      <td>Type of the Payment Method.</td>
       <td>Text</td>
       <td>100</td>
       <td>Yes</td>
@@ -11349,7 +11349,7 @@ In this model, the merchant’ system is in charge of defining the period, the t
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.Type</code></td>
-      <td>Means of Payment Type.</td>
+      <td>Type of the Payment Method.</td>
       <td>Text</td>
       <td>100</td>
       <td>Yes</td>
@@ -11682,7 +11682,7 @@ That way, when a transaction with recurrent markup is submitted to the API and C
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.Type</code></td>
-      <td>Means of Payment Type.</td>
+      <td>Type of the Payment Method.</td>
       <td>Text</td>
       <td>100</td>
       <td>Yes</td>
@@ -12466,7 +12466,7 @@ That way, when a transaction with recurrent markup is submitted to the API and C
       <td>Text</td>
       <td>100</td>
       <td>Yes</td>
-      <td>Means of Payment Type.</td>
+      <td>Type of the Payment Method.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.Amount</code></td>
@@ -12914,7 +12914,7 @@ That way, when a transaction with recurrent markup is submitted to the API and C
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.Type</code></td>
-      <td>Means of Payment Type.</td>
+      <td>Type of the Payment Method.</td>
       <td>Text</td>
       <td>100</td>
       <td>Yes</td>
@@ -13275,7 +13275,7 @@ That way, when a transaction with recurrent markup is submitted to the API and C
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.Type</code></td>
-      <td>Means of Payment Type.</td>
+      <td>Type of the Payment Method.</td>
       <td>Text</td>
       <td>100</td>
       <td>Yes</td>
@@ -13967,7 +13967,7 @@ To use wallets in the API Cielo eCommerce, the merchant must have the wallets in
       <td>Text</td>
       <td>100</td>
       <td>Yes</td>
-      <td>Means of Payment Type.</td>
+      <td>Type of the Payment Method.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.Amount</code></td>
@@ -14312,7 +14312,7 @@ To use wallets in the API Cielo eCommerce, the merchant must have the wallets in
       <td>Text</td>
       <td>100</td>
       <td>Yes</td>
-      <td>Means of Payment Type.</td>
+      <td>Type of the Payment Method.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.Amount</code></td>
@@ -14703,7 +14703,7 @@ More information and complete integration, you can find in the link: https://dev
       <td>Text</td>
       <td>100</td>
       <td>Yes</td>
-      <td>Means of Payment Type.</td>
+      <td>Type of the Payment Method.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.Amount</code></td>
