[8f6c49bb515dd46ae38e4fe5b70c463d359bc0be]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -574,7 +574,7 @@
 <p>In sandbox, it is necessary to use the <code class="highlighter-rouge">Provider</code> as <strong>SIMULATED</strong></p>
 
 <p>The Simulated is a configuration that emulates the use of payments with Credit Card.
-With this means of payment it is possible to simulate the flows of:</p>
+With this payment method it is possible to simulate the flows of:</p>
 
 <ul>
   <li>Authorization</li>
@@ -582,7 +582,7 @@ With this means of payment it is possible to simulate the flows of:</p>
   <li>Cancellation.</li>
 </ul>
 
-<p>For best use of the Simulated Payment Means, we are providing <strong>test cards</strong> in the table below.</p>
+<p>For best use of the Simulated Payment Methods, we are providing <strong>test cards</strong> in the table below.</p>
 
 <aside class="notice">The status of the transactions are defined by the FINALS of each card, as well as the ReturnCode.</aside>
 
