[b6ec5a0d34294760960dc118e1da92104861cc97]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -13508,6 +13508,8 @@ The following data will be returned about the card:</p>
 
 <aside class="warning">BIN Check must be enabled by Cielo Support Team. Contact them to enable the service.</aside>
 
+<h2 id="use-case-2">Use Case</h2>
+
 <h2 id="integration-2">Integration</h2>
 
 <h3 id="request-33">Request</h3>
@@ -13616,7 +13618,7 @@ The following data will be returned about the card:</p>
   <p>If other flags/Brand are sent, the error <strong>57-Bandeira inválida</strong> will be displayed.</p>
 </blockquote>
 
-<h2 id="use-case-2">Use case</h2>
+<h2 id="use-case-3">Use case</h2>
 
 <p>This is an example of how to use zero auth to improve your sales conversion</p>
 
