[e9a99ce70c40099ec8e690c267c032aeaa46cde2]: Delete fluxosrecprog _en.png

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -9301,7 +9301,7 @@ In this model, the merchant’ system is in charge of defining the period, the t
 
 <p><strong>Scheduled Recurrence flow</strong></p>
 
-<p><img src="https://developercielo.github.io/en/images/FluxosRECPROG.PNG" alt="" /></p>
+<p><img src="https://developercielo.github.io/images/fluxosrecprog_en.png" alt="" /></p>
 
 <h4 id="use-case-1">Use case</h4>
 
