[65f741e30017d74fce7efc160cfa7c381431926c]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -9301,7 +9301,7 @@ In this model, the merchant’ system is in charge of defining the period, the t
 
 <p><strong>Scheduled Recurrence flow</strong></p>
 
-<p><img src="https://developercielo.github.io/api-portal/sites/default/files/images/fluxosrecprog_en.png" alt="" /></p>
+<p><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/images/fluxosrecprog_en.png" alt="Recprog_EN" /></p>
 
 <h4 id="use-case-1">Use case</h4>
 
