--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -13495,8 +13495,7 @@ That way, when a transaction with recurrent markup is submitted to the API and C
 
 <h1 id="bin-checker">BIN Checker</h1>
 
-<p>The BIN Checker makes it possible to verify your customers payment information. 
-The following data will be returned about the card:</p>
+<p>The BIN Checker is credit or debit card data search service, that Cielo Ecommerce merchants can use to validate whether the screen filled data on the card is valid. The service return the following data on the card:</p>
 
 <ul>
   <li><strong>Card Brand</strong></li>
@@ -13584,7 +13583,7 @@ The following data will be returned about the card:</p>
 </table>
 
 <blockquote>
-  <p><strong>NOTE</strong>: On testing environment (SANDBOX), the returned data is simulated, so they are not valid BIN Check results. Only fields and format must be considered. To check valid resultson BIN Check, production environment must be used.</p>
+  <p><strong>NOTE</strong>: On testing environment (SANDBOX), the returned data is simulated, so they are not valid BIN Check results. Only fields and format must be considered. For real identification of the BIN Check, production environment must be used.</p>
 </blockquote>
 
 <h1 id="zero-auth">Zero Auth</h1>
