[71eb31a62c64c7c89639367122f691e82cba33bc]: Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -13596,9 +13596,8 @@ O serviço retornar os seguintes dados sobre o cartão:</p>
   <li>Impedir erros com tipo de cartão</li>
   <li>Oferecer recuperação de carrinhos online</li>
   <li>Alertar sobre cartões internacionais</li>
+  <li>Impedir erros com tipo de cartão</li>
 </ol>
-
-<p>Impedir erros com tipo de cartão</p>
 
 <p>O Submergível pode usar a consulta bins no carrinho para identificar 2 dos principais erros no preenchimento de formulários de pagamento:</p>
 
