[518a1ead61de273035008f3e4f58be8a5535cd19]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -13509,6 +13509,30 @@ That way, when a transaction with recurrent markup is submitted to the API and C
 
 <h2 id="use-case-2">Use Case</h2>
 
+<p>See an use case example: <strong>BIN Checker + cart recovery</strong></p>
+
+<p>Knowing the Bin checker of the Cielo Ecommerce API, how could it prevent the loss of carts?</p>
+
+<p>It can apply the bin checker bins and 3 scenarios!</p>
+
+<ol>
+  <li>Prevent errors with card type</li>
+  <li>Offer online car recovery</li>
+  <li>Alert about international cards</li>
+  <li>Prevent errors with card type</li>
+</ol>
+
+<p>The Submersible can use the bins checker in the cart to identify 2 of the major errors in completing payment forms:</p>
+
+<ul>
+  <li>
+    <p><strong>Wrong issuer</strong>and confuse credit card with debit ○ Wrong issuer: When filling out the payment form, it is possible to conduct a checker and set the correct issuer. This is a much safer method than based on algorithms in the form, since the base of the bins are checked is that of the card issuing flag.</p>
+  </li>
+  <li>
+    <p><strong>Card confusion:</strong> When filling out the payment form, it is possible to conduct a check and notify the consumer if it is using a debit card when in fact he should use a debit card.</p>
+  </li>
+</ul>
+
 <h2 id="integration-2">Integration</h2>
 
 <h3 id="request-33">Request</h3>
