[28c1f54260a69444ccb0d67fca39741755c3f94b]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -13526,12 +13526,26 @@ That way, when a transaction with recurrent markup is submitted to the API and C
 
 <ul>
   <li>
-    <p><strong>Wrong issuer</strong>and confuse credit card with debit ○ Wrong issuer: When filling out the payment form, it is possible to conduct a checker and set the correct issuer. This is a much safer method than based on algorithms in the form, since the base of the bins are checked is that of the card issuing flag.</p>
+    <p><strong>Wrong issuer</strong> and confuse credit card with debit ○ Wrong issuer: When filling out the payment form, it is possible to conduct a checker and set the correct issuer. This is a much safer method than based on algorithms in the form, since the base of the bins are checked is that of the card issuing flag.</p>
   </li>
   <li>
     <p><strong>Card confusion:</strong> When filling out the payment form, it is possible to conduct a check and notify the consumer if it is using a debit card when in fact he should use a debit card.</p>
   </li>
 </ul>
+
+<p><strong>Offer a cart recovery online</strong></p>
+
+<ul>
+  <li>
+    <p>The Submersible can use the bins query in the cart to offer a new means of payment if the transaction fails on the first attempt.</p>
+  </li>
+  <li>
+    <p>When running a query at the time of filling out the payment form, if the card is multiple (Credit and Debit), the Submersible may retain the data on the card, and if the credit transaction fails, it can automatically offer the consumer a debit transaction with the same card.</p>
+  </li>
+</ul>
+
+<p><strong>Alert about international cards</strong>
+The Submersible can use the bin checker in the cart to alert international buyers, that if the card is not enabled to transact in Brazil, the transaction will be denied.</p>
 
 <h2 id="integration-2">Integration</h2>
 
