--- a/manual/emv3ds.html
+++ b/manual/emv3ds.html
@@ -163,13 +163,29 @@
 
 <aside class="notice">Caso tenha implementado mecanismo de autenticação fora da Cielo (MPI Externo), pule direto para "Etapa de Autorização"</aside>
 
+<h2 id="bandeiras-e-emissores-disponíveis">Bandeiras e Emissores Disponíveis</h2>
+
+<p>Para envio de transações com pedido de autenticação 3DS 2.0 é fundamental que, além da Cielo, o Emissor e Bandeira estejam prontos com a solução. Atualmente estão disponíveis:</p>
+
+<ul>
+  <li>Mastercard: a bandeira possui um modelo de Stand-In, caso o Emissor ainda não esteja apto a responder um pedido de autenticação usando EMV 3DS 2.0. Nesse cenário, a Mastercard avalia os dados enviados, como por exemplo o histórico comportamental do cliente e transacional, classificando em modo Stand-In os pedidos de autenticação como “Baixo Risco” e “Não Baixo Risco”. A partir dessas informações, os Emissores poderão contar com uma proteção meso não possuindo uma solução própria de 3DS 2.0, e terão uma maior confiança nas transações autenticadas. Em casos de Stand-In, a Mastercard responderá a autenticação em 100% dos casos silenciosamente (sem desafio para o portador) e, uma vez que a transação foi autenticada, o liability em caso de fraude ficará com o Emissor.</li>
+</ul>
+
+<aside class="notice">**Emissores já prontos com solução própria de 3DS 2.0 Mastercard:** Santander (Débito e Crédito), PagSeguro (Crédito), C6 (Débito e Crédito), Realize (Crédito), Itaú (Crédito) e Acesso (Crédito). O restante dos emissores funcionarão, por enquanto, com a solução de Stand-In da Mastercard.</aside>
+
+<ul>
+  <li>Visa: a bandeira não possui modelo de Stand-In e apenas Emissores 100% prontos com solução própria estão aptos a responder um pedido de autenticação usando EMV 3DS 2.0.</li>
+</ul>
+
+<aside class="notice">**Emissores já prontos com solução própria de 3DS 2.0 Visa:** Caixa (Crédito), Santander (Débito e Crédito) e Itaú (Débito e Crédito – atualmente com autenticação silenciosa, sem desafio).</aside>
+
 <h2 id="o-que-é-o-data-only--somente-notificação">O que é o Data Only – Somente Notificação</h2>
 
 <p>O Data Only é um campo opcional ao lojista que poderá ser utilizado exclusivamente para cartões Mastercard.</p>
 
 <p>Para utilizá-lo, deverá ser parametrizado o campo <strong>bpmpi_auth_notifyonly</strong> descrito no item <strong>Etapa de Autenticação – passo 3 – Mapeamento de classes</strong>. No modelo Data Only, os campos adicionais do 3DS 2.0 são mapeados da mesma forma, e enviados para a Mastercard e Bancos Emissores, porém, sem solicitar a autenticação.</p>
 
-<p>O benefício do uso do Data Only é enriquecer o banco de dados dos Bancos Emissores e da Mastercard, que passará a receber mais informações sobre os portadores de cada lojista. Esse campo busca aprimorar a autenticação silenciosa e o índice de aprovação dos Emissores, considerando o contexto atual onde o mercado está evoluindo para a integração com o novo protocolo de autenticação 2.0. Além disso, a partir de Maio de 2019, a bandeira Mastercard cobrará um <em>fee</em> adicional por transação não autenticada e o Data Only isenta o valor do <em>fee</em> cobrado.</p>
+<p>O benefício do uso do Data Only é enriquecer o banco de dados dos Bancos Emissores e da Mastercard, que passará a receber mais informações sobre os portadores de cada lojista. Esse campo busca aprimorar a autenticação silenciosa e o índice de aprovação dos Emissores, considerando o contexto atual onde o mercado está evoluindo para a integração com o novo protocolo de autenticação 2.0. Além disso, a partir de Maio de 2019, a bandeira Mastercard cobrará um <em>fee</em> adicional por transação não autenticada do adquirente, que poderá impactar no preço negociado entre a Cielo e o estabelecimento. O Data Only isenta o valor do <em>fee</em> cobrado.</p>
 
 <p>Vale destacar que nesse modelo, visto que não há autenticação do Emissor, o risco de chargeback por fraude permanece com o lojista.</p>
 
