[8360d7f1334f3e0c9ba809b80a84a9eb934957a8]: Update 2018-09-10-emv3ds.md

--- a/manual/emv3ds.html
+++ b/manual/emv3ds.html
@@ -171,13 +171,13 @@
   <li>Mastercard: a bandeira possui um modelo de Stand-In, caso o Emissor ainda não esteja apto a responder um pedido de autenticação usando EMV 3DS 2.0. Nesse cenário, a Mastercard avalia os dados enviados, como por exemplo o histórico comportamental do cliente e transacional, classificando em modo Stand-In os pedidos de autenticação como “Baixo Risco” e “Não Baixo Risco”. A partir dessas informações, os Emissores poderão contar com uma proteção meso não possuindo uma solução própria de 3DS 2.0, e terão uma maior confiança nas transações autenticadas. Em casos de Stand-In, a Mastercard responderá a autenticação em 100% dos casos silenciosamente (sem desafio para o portador) e, uma vez que a transação foi autenticada, o liability em caso de fraude ficará com o Emissor.</li>
 </ul>
 
-<aside class="notice">**Emissores já prontos com solução própria de 3DS 2.0 Mastercard:** Santander (Débito e Crédito), PagSeguro (Crédito), C6 (Débito e Crédito), Realize (Crédito), Itaú (Crédito) e Acesso (Crédito). O restante dos emissores funcionarão, por enquanto, com a solução de Stand-In da Mastercard.</aside>
+<aside class="notice">Emissores já prontos com solução própria de 3DS 2.0 Mastercard: Santander (Débito e Crédito), PagSeguro (Crédito), C6 (Débito e Crédito), Realize (Crédito), Itaú (Crédito) e Acesso (Crédito). O restante dos emissores funcionarão, por enquanto, com a solução de Stand-In da Mastercard.</aside>
 
 <ul>
   <li>Visa: a bandeira não possui modelo de Stand-In e apenas Emissores 100% prontos com solução própria estão aptos a responder um pedido de autenticação usando EMV 3DS 2.0.</li>
 </ul>
 
-<aside class="notice">**Emissores já prontos com solução própria de 3DS 2.0 Visa:** Caixa (Crédito), Santander (Débito e Crédito) e Itaú (Débito e Crédito – atualmente com autenticação silenciosa, sem desafio).</aside>
+<aside class="notice">Emissores já prontos com solução própria de 3DS 2.0 Visa: Caixa (Crédito), Santander (Débito e Crédito) e Itaú (Débito e Crédito – atualmente com autenticação silenciosa, sem desafio).</aside>
 
 <h2 id="o-que-é-o-data-only--somente-notificação">O que é o Data Only – Somente Notificação</h2>
 
