--- a/en/manual/emv3ds.html
+++ b/en/manual/emv3ds.html
@@ -170,7 +170,7 @@ is valid for all the eCommerce transactions, whether it is debit, credit or prep
 
 <p>To use is, it must be parameterized the field <strong>bpmpi_auth_notifyonly</strong> described in the <strong>Authentication Step - Step 3 - Mapping Classes</strong>. In the Data Only model, the additional 3DS 2.0 fields are mapped in the same way, and sent to Mastercard and Issuing Banks, however, without requiring authentication.</p>
 
-<p>The benefit of using Data Only is to enrich the Issuing Banks and MasterCard database, who will receive more information about the holders of each merchant. This field seeks to improve the Silent Authentication and Issuer approval rating, considering the current context where the market is growing to integrate with the new 2.0 authentication protocol. In addition, from May 2019, Mastercard will charge an additional <em>fee</em> for unauthenticated transactions and Data Only will exempt the <em>fee</em> charged.</p>
+<p>The benefit of using Data Only is to enrich the Issuing Banks and MasterCard database, who will receive more information about the holders of each merchant. This field seeks to improve the Silent Authentication and Issuer approval rating, considering the current context where the market is growing to integrate with the new 2.0 authentication protocol. In addition, from May 2019, Mastercard will charge an additional <em>fee</em> for unauthenticated transaction of the acquirer, which may impact on the price negotiated between Cielo and the merchant. Data Only will exempt the <em>fee</em> charged.</p>
 
 <p>It is worth noting  that in this model, since there is no authentication of the Issuer, the risk of chargeback for fraud remains with the merchant.</p>
 
