--- a/en/manual/emv3ds.html
+++ b/en/manual/emv3ds.html
@@ -164,6 +164,19 @@ is valid for all the eCommerce transactions, whether it is debit, credit or prep
 
 <aside class="notice">In case you implement the authentication process apart from Cielo (External Authentication), skip to the authorization step.</aside>
 
+<h2 id="card-brands-and-issuers-available">Card Brands and Issuers Available</h2>
+
+<p>In order to send transactions with request for 3DS 2.0 authentication, it is important that, besides Cielo, the issuer and the card brand are ready with the solution. 
+Currently are available:</p>
+
+<p><strong>- Mastercard:</strong> the brand has a Stand-In model, in case that the issuer is not able yet to respond an authenticated request using 3DS 2.0 EMV. In this scenario, Mastercard evaluates the uploaded data, for example the client’s historical behavioral and transactional classifying authentication requests as “Low Risk” and “No Low Risk” in Stand-In mode. With this information, the Issuers have a protection even if they do not have their own solution of 3DS 2.0, and will have greater confidence in authenticated transactions. In Stand-In cases, Mastercard will respond to the authentication in 100% of cases silently (no challenge to the carrier) and, once the transaction has been authenticated, the liability in case of fraud will remain with the Issuer.</p>
+
+<aside class="notice">Issuers that are ready with its own solution of 3DS 2.0 Mastercard: Santander (Debit e Credit), PagSeguro (Credit), C6 (Debit e Credit), Realize (Credit), Itaú (Credit) e Acesso (Credit). The rest of the issuers will work,  for the time being, with the Mastercard Stand-In solution.</aside>
+
+<p><strong>- Visa:</strong> the card brand does not has a Stand-In model and just issuers 100% ready with its own solution are able to respond to an authenticated request using the 3DS 2.0 EMV.</p>
+
+<aside class="notice"> Issuers that are ready with its own solution of 3DS 2.0 Visa: Caixa (Credit), Santander (Debit e Credit) e Itaú (Debit e Credit – currently with silent authentication, no challenge). </aside>
+
 <h2 id="what-is-the-data-only---notification-only">What is the Data Only - Notification Only</h2>
 
 <p>Data Only is an extra and optional field available to the merchant that can be used exclusively for MasterCard.</p>
