[9079efbd738d146a79fcd3f309d77075c75dc130]: Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -13734,7 +13734,7 @@ O Submergível pode usar a consulta bins no carrinho para alertar compradores in
 
 <h2 id="caso-de-uso-3">Caso de uso</h2>
 
-<p>Este é um exemplo de como usar o zero auth para melhorar sua conversão de vendas</p>
+<p>Este é um exemplo de como usar o zero auth para melhorar sua conversão de vendas.</p>
 
 <p>O Zero Auth é uma ferramenta da Cielo que permite verificar se um cartão está valido para realizar uma compra antes que o pedido seja finalizado. Ele faz isso simulando uma autorização, mas sem afetar o limite de crédito ou alertar o portados do cartão sobre o teste.</p>
 
