[0ea1b63e5796276f6f8ae435aa800e1f2687c31a]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -13757,6 +13757,13 @@ The Submersible can use the bin checker in the cart to alert international buyer
       <td>10</td>
       <td>Yes</td>
     </tr>
+    <tr>
+      <td><code class="highlighter-rouge">CardToken</code></td>
+      <td>Card Token 3.0</td>
+      <td>GUID</td>
+      <td>36</td>
+      <td>Conditional</td>
+    </tr>
   </tbody>
 </table>
 
@@ -13768,6 +13775,8 @@ The Submersible can use the bin checker in the cart to alert international buyer
   </span><span class="s2">"Brand"</span><span class="p">:</span><span class="s2">"Visa"</span><span class="w">
 </span><span class="p">}</span><span class="w">
 </span></code></pre></div></div>
+
+<p>Below is the list of Requisition fields:</p>
 
 <table>
   <thead>
@@ -13789,7 +13798,7 @@ The Submersible can use the bin checker in the cart to alert international buyer
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CardToken</code></td>
-      <td>Tokenized Card</td>
+      <td>Tokenized Card 3.0</td>
       <td>GUID</td>
       <td>36</td>
       <td>yes</td>
@@ -13800,10 +13809,6 @@ The Submersible can use the bin checker in the cart to alert international buyer
 <h3 id="response-40">Response</h3>
 
 <p>If there is an error in the request, where it is not possible to validate the card, the service will return error:</p>
-
-<blockquote>
-  <p><strong>500 – Internal Server Erro</strong></p>
-</blockquote>
 
 <h4 id="valid-card">Valid Card</h4>
 
