--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -13808,7 +13808,9 @@ The Submersible can use the bin checker in the cart to alert international buyer
 
 <h3 id="response-40">Response</h3>
 
-<p>If there is an error in the request, where it is not possible to validate the card, the service will return error:</p>
+<p>The response always returns if the card can be authorized at the moment. This information only means that <em>the card is valid to transact</em>, but does not necessarily indicate that a certain value will be authorized.</p>
+
+<p>Below the fields returned after validation:</p>
 
 <h4 id="valid-card">Valid Card</h4>
 
