--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -13697,6 +13697,8 @@ The Submersible can use the bin checker in the cart to alert international buyer
 </span><span class="p">}</span><span class="w">
 </span></code></pre></div></div>
 
+<p>Below the fields returned after validation:</p>
+
 <table>
   <thead>
     <tr>
