[9b3fa09da933978e0923bef7a79c75b972950ff3]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -13683,10 +13683,15 @@ The Submersible can use the bin checker in the cart to alert international buyer
 
 <p>FlixNet uses Zero Auth at 2 different times:</p>
 
-<p>Registration: it must be included a card to get 30 days free in the first month.
+<ul>
+  <li>
+    <p><strong>Registration:</strong> it must be included a card to get 30 days free in the first month.
 The problem is that at the end of this period, if the card is invalid, the new register exists, but it does not work, because the saved card is invalid. FlixNet solved this problem by testing the card with Zero Auth at the time of registration, then, they already know if the card is valid and release the creation of the account. If the card is not accepted, FlixNet may suggest the use of another card.</p>
-
-<p>Recurrence: every month, before you charge the Subscription, Flixnet tests the card with zero auth, then, knowing if it will be authorized or not. This helps FlixNet predict which cards will be denied, already triggering the subscriber to update the registration before the payday.</p>
+  </li>
+  <li>
+    <p><strong>Recurrence:</strong> every month, before you charge the Subscription, Flixnet tests the card with zero auth, then, knowing if it will be authorized or not. This helps FlixNet predict which cards will be denied, already triggering the subscriber to update the registration before the payday.</p>
+  </li>
+</ul>
 
 <h2 id="integration-3">Integration</h2>
 
