--- a/manual/emv3ds.html
+++ b/manual/emv3ds.html
@@ -155,7 +155,7 @@
 <p>O estabelecimento comercial deve atender aos requisitos abaixo para a utilização do 3DS 2.0:</p>
 
 <ul>
-  <li>Ter afiliação do Cielo E-Commerce 3.0;</li>
+  <li>Ter afiliação do Cielo E-Commerce 1.5 ou 3.0;</li>
   <li>Ter o cadastro de 3DS 2.0 (solicitar para o Suporte eCommerce);</li>
   <li>Concluir a integração técnica do fluxo de autenticação;</li>
   <li>Concluir a integração técnica do fluxo de autorização;</li>
