[23a668e8d2325c680b139ed4c94b8acde9203842]: Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -18873,6 +18873,13 @@ Se esse código for exibido, a requisição contem erros (EX: tamanho/condiçõe
       <td>Não</td>
     </tr>
     <tr>
+      <td>BP176</td>
+      <td>Transação não permitida.</td>
+      <td>Parceiro deve checar se o processo de integração foi concluído com sucesso.</td>
+      <td>Parceiro deve checar se o processo de integração foi concluído com sucesso.</td>
+      <td>—</td>
+    </tr>
+    <tr>
       <td>BV</td>
       <td>Transação não autorizada. Cartão vencido</td>
       <td>Transação não autorizada. Cartão vencido.</td>
@@ -18986,14 +18993,7 @@ Se esse código for exibido, a requisição contem erros (EX: tamanho/condiçõe
     </tr>
     <tr>
       <td>FG</td>
-      <td>Transação não autorizada. Ligue AmEx.</td>
-      <td>Transação não autorizada. Oriente o portador a entrar em contato com a Central de Atendimento AmEx.</td>
-      <td>Transação não autorizada. Entre em contato com a Central de Atendimento AmEx no telefone 08007285090</td>
-      <td>Não</td>
-    </tr>
-    <tr>
-      <td>FG</td>
-      <td>Ligue 08007285090</td>
+      <td>Transação não autorizada. Ligue AmEx 08007285090.</td>
       <td>Transação não autorizada. Oriente o portador a entrar em contato com a Central de Atendimento AmEx.</td>
       <td>Transação não autorizada. Entre em contato com a Central de Atendimento AmEx no telefone 08007285090</td>
       <td>Não</td>
@@ -19004,6 +19004,13 @@ Se esse código for exibido, a requisição contem erros (EX: tamanho/condiçõe
       <td>Transação não autorizada. Referida pelo Lynx Online de forma preventiva.</td>
       <td>Transação não autorizada. Entre em contato com o lojista.</td>
       <td>Não</td>
+    </tr>
+    <tr>
+      <td>GD</td>
+      <td>Transação não permitida.</td>
+      <td>Transação não permitida. Entre em contato com a Cielo.</td>
+      <td>Transação não permitida. Entre em contato com a Cielo.</td>
+      <td>—</td>
     </tr>
     <tr>
       <td>HJ</td>
