[2b70ce45b25497e04054eb86d9960375f2507ce3]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -16517,6 +16517,14 @@ More information and complete integration, you can find in the link: https://dev
       <td> </td>
     </tr>
     <tr>
+      <td>BP176</td>
+      <td>Transaction not allowed.</td>
+      <td>Partner should check if the onboarding process has been completed successfully.</td>
+      <td>Partner should check if the onboarding process has been completed successfully.</td>
+      <td>—</td>
+      <td> </td>
+    </tr>
+    <tr>
       <td>BV</td>
       <td>Unauthorized transaction. Expired card</td>
       <td>Unauthorized transaction. Expired card.</td>
@@ -16646,15 +16654,7 @@ More information and complete integration, you can find in the link: https://dev
     </tr>
     <tr>
       <td>FG</td>
-      <td>Unauthorized transaction. Call AmEx.</td>
-      <td>Unauthorized transaction. Guide the carrier to contact AmEx Call Center.</td>
-      <td>Unauthorized transaction. Contact the AmEx Call Center at the phone number 08007285090</td>
-      <td>No</td>
-      <td> </td>
-    </tr>
-    <tr>
-      <td>FG</td>
-      <td>Call 08007285090</td>
+      <td>Unauthorized transaction. Call AmEx 08007285090.</td>
       <td>Unauthorized transaction. Guide the carrier to contact AmEx Call Center.</td>
       <td>Unauthorized transaction. Contact the AmEx Call Center at the phone number 08007285090</td>
       <td>No</td>
@@ -16667,6 +16667,14 @@ More information and complete integration, you can find in the link: https://dev
       <td>Unauthorized transaction. Contact the merchant.</td>
       <td>No</td>
       <td> </td>
+    </tr>
+    <tr>
+      <td>GD</td>
+      <td>Transaction not allowed</td>
+      <td>Transaction not allowed</td>
+      <td>Transaction can not be processed in the establishment. Contact Cielo for more details.</td>
+      <td>Transaction not allowed. Contact the virtual store</td>
+      <td>No</td>
     </tr>
     <tr>
       <td>HJ</td>
@@ -16739,14 +16747,6 @@ More information and complete integration, you can find in the link: https://dev
       <td>Transaction not allowed. There was a failure in data validation. Review the reported data and try again. If the error persists, contact the Virtual Store.</td>
       <td>No</td>
       <td> </td>
-    </tr>
-    <tr>
-      <td>GD</td>
-      <td>Transaction not allowed</td>
-      <td>Transaction not allowed</td>
-      <td>Transaction can not be processed in the establishment. Contact Cielo for more details..</td>
-      <td>Transaction not allowed. Contact the virtual store</td>
-      <td>No</td>
     </tr>
   </tbody>
 </table>
