[4a34722e08daa6f155ba894e96cdfe63c4fb7479]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -16670,8 +16670,8 @@ More information and complete integration, you can find in the link: https://dev
     </tr>
     <tr>
       <td>GD</td>
-      <td>Transaction not allowed</td>
-      <td>Transaction not allowed</td>
+      <td>Transaction not allowed.</td>
+      <td> </td>
       <td>Transaction can not be processed in the establishment. Contact Cielo for more details.</td>
       <td>Transaction not allowed. Contact the virtual store</td>
       <td>No</td>
