[b9e2d82e6ad7bebbe69cb88c4a798c8ad05484d3]: Merge pull request #195 from DeveloperCielo/tsaitobraspag-patch-128
Update 2018-09-10-emv3ds.md

--- a/en/manual/emv3ds.html
+++ b/en/manual/emv3ds.html
@@ -156,7 +156,7 @@ is valid for all the eCommerce transactions, whether it is debit, credit or prep
 <p>The merchant must attend the below requirements to use 3DS 2.0:</p>
 
 <ul>
-  <li>Cielo E-Commerce 3.0 affiliation;</li>
+  <li>Cielo E-Commerce 1.5 or 3.0 affiliation;</li>
   <li>Registered in the 3DS 2.0 (request for eCommerce Support);</li>
   <li>Integrate the authorization process;</li>
   <li>Integrate the authentication process;</li>
