--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -14035,6 +14035,18 @@ The return code <strong>“00” represents success in Zero Auth</strong>, the o
   </tbody>
 </table>
 
+<p>b) In order to use this resource, for security reasons, it will be obligatory on the Cielo’s behalf, <strong>at least one valid IP of the establishment.</strong> Otherwise the request will not be authorized (HTTP 401 NotAuthorized).</p>
+
+<p><strong>STEP 3</strong></p>
+
+<p>a) In response, the establishment will receive a json (HTTP 201 Created) containing among other information, the ticket (AccessToken), such as:</p>
+
+<p><img src="https://developercielo.github.io/images/response-ticket-silent-order-post-cielo.jpg" alt="Response Ticket" /></p>
+
+<p>For security reasons, this ticket will allow the establishment to save only 1 card within a deadline already stipulated in the response, using the ExpiresIn attribute (by default, 20 minutes). Whatever happens first will invalidate this same ticket for future use.</p>
+
+<p><img src="https://developercielo.github.io/images/html-silent-order-post.jpg" alt="Pagina Checkout" /></p>
+
 <h1 id="wallet">Wallet</h1>
 
 <h2 id="what-are-wallets">What are Wallets</h2>
